--- a/src/CssFolder/Project.css
+++ b/src/CssFolder/Project.css
@@ -1,15 +1,32 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  cursor: pointer;
-  font-family: sans-serif;
-}
 .ProjectDiv {
   background-color: black;
-  height: auto;
   padding: 8% 0;
 }
+
+.MainCard {
+ height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
+  min-height: 350px;}
+
+.MainCard img {
+  height: 200px;
+  object-fit: cover;
+}
+
+.CardBody {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  padding: 20px;
+  
+}
+
 .ProjectDiv button {
   background: linear-gradient(to right, #0f0f0f, #008080);
   color: white;
@@ -23,15 +40,17 @@
   text-align: center;
   box-shadow: 0px 0px 10px rgb(20, 193, 20);
   width: 100%;
-  display: block;
-  margin: 25px 0;
+  margin-top: 20px;
 }
+
 .ProjectDiv button:hover {
   background: linear-gradient(to right, #008080, #0f0f0f);
   box-shadow: 0px 0px 10px rgb(20, 193, 20);
   transform: translateY(-5px);
 }
+
 .ProjectDiv a {
   color: white;
   text-decoration: none;
+  display: block;
 }
